fix some uneven styling issues

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -54,11 +54,11 @@
 
 #contactButtons img {
     margin-top: 15px;
-    width: 32px;
+    width: 28px;
     margin-right: 60px;
 }
 
-#contactButtons a:nth-child(3) > img {
+#contactButtons a:last-child > img {
     margin-right: 0px;
 }
 
@@ -82,4 +82,36 @@
     color: rgba(1, 72, 16, 0.9);
     font-size: 1.3em;
     margin-left: -6%;
+}
+
+.content_images {
+    position: relative;
+    margin-bottom: 15px;
+}
+
+.content_images > img:last-child {
+    position: relative;
+}
+
+.content_images > img {
+    position: absolute;
+    top: 0px;
+    width: 80%;
+    margin-left: 10%;
+    opacity: 0.9;
+    -webkit-transition: opacity 1s linear;
+    -moz-transition: opacity 1s linear;
+    -o-transition: opacity 1s linear;
+    transition: opacity 1s linear;
+}
+
+#barContainer {
+    margin-bottom: 15px;
+    margin-left: 10%;
+    fill: white;
+}
+
+img.shown {
+    opacity: 1;
+    z-index: 100;
 }
